[project]
name = "RL-HF"
description = "Reinforcement learning by Huggingface"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Martin Engel", email = "infaninio@gmail.com"},
]

dependencies = [
    "jupyter",
    "pyvirtualdisplay",
    "importlib-metadata",
    "box2d-py",
    "stable-baselines3[extra]",
    "huggingface_sb3",
    "pyglet==1.5.1",
    "ale-py==0.7.4",
    "pickle5",
]

dynamic = ["version"]
[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
